estilizando cores main

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,15 @@
 .divs-facilidades {
     width: 325px;
 }
+
+.icone {
+    color: #daff01;
+}
+
+.titulos-icones {
+    color: #daff01;
+}
+
+.botao-lilas {
+    background-color: #9353ff !important;
+}
