--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,13 @@
 .botao-lilas {
     background-color: #9353ff !important;
 }
+
+.posicao {
+    top: 40%;
+}
+
+@media (max-width: 767px) {
+    .posicao {
+        top: 60%;
+    }
+}
